force-app/main/default/objects/UtFC_Film_Event__c/fields/Presenter_Instructor_AF__c.field-meta.xml
<CustomField>
    <fullName>Presenter_Instructor_AF__c</fullName>
    <label>Presenter/Instructor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>