force-app/main/default/objects/UtFC_Film_Event__c/fields/Primary_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Primary_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>UtFC Film Events</relationshipLabel>
    <relationshipName>UtFC_Film_Events</relationshipName>
    <type>Lookup</type>
</CustomField>