force-app/main/default/objects/UtFC_Film_Event__c/fields/Print_Traffic_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Print_Traffic_Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Print Traffic Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Print Traffic</relationshipLabel>
    <relationshipName>UtFC_Film_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>