force-app/main/default/objects/UtFC_Film_Event__c/fields/Print_Traffic_Company__c.field-meta.xml
<CustomField>
    <fullName>Print_Traffic_Company__c</fullName>
    <label>Print Traffic Company</label>
    <type>TextArea</type>
</CustomField>