force-app/main/default/objects/UtFC_Film_Event__c/fields/Print_Traffic_Email__c.field-meta.xml
<CustomField>
    <fullName>Print_Traffic_Email__c</fullName>
    <label>Print Traffic Email</label>
    <type>Email</type>
</CustomField>