force-app/main/default/objects/UtFC_Film_Event__c/fields/Print_Traffic_Notes__c.field-meta.xml
<CustomField>
    <fullName>Print_Traffic_Notes__c</fullName>
    <label>Print Traffic Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>