force-app/main/default/objects/UtFC_Film_Event__c/fields/Print_Traffic_Phone__c.field-meta.xml
<CustomField>
    <fullName>Print_Traffic_Phone__c</fullName>
    <label>Print Traffic Phone</label>
    <type>Phone</type>
</CustomField>