force-app/main/default/objects/UtFC_Film_Event__c/fields/Print_Traffic_Status__c.field-meta.xml
<CustomField>
    <fullName>Print_Traffic_Status__c</fullName>
    <label>Print Traffic Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>in transit to UFC</fullName>
            </value>
            <value>
                <fullName>in transit to venue</fullName>
            </value>
            <value>
                <fullName>in transit to distributor</fullName>
            </value>
            <value>
                <fullName>in house</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>at Venue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>