force-app/main/default/objects/UtFC_Film_Event__c/fields/Print_Traffic_Technicolor__c.field-meta.xml
<CustomField>
    <fullName>Print_Traffic_Technicolor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Print Traffic Technicolor</label>
    <type>Checkbox</type>
</CustomField>