force-app/main/default/objects/UtFC_Film_Event__c/fields/Print_Traffic_Tracking_Info__c.field-meta.xml
<CustomField>
    <fullName>Print_Traffic_Tracking_Info__c</fullName>
    <label>Print Traffic Tracking Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>