force-app/main/default/objects/UtFC_Film_Event__c/fields/Print_Traffic_Venue_Contact__c.field-meta.xml
<CustomField>
    <fullName>Print_Traffic_Venue_Contact__c</fullName>
    <label>Print Traffic Venue Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>