force-app/main/default/objects/UtFC_Film_Event__c/fields/Private__c.field-meta.xml
<CustomField>
    <fullName>Private__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this event is private check this box.</inlineHelpText>
    <label>Private Event?</label>
    <type>Checkbox</type>
</CustomField>