force-app/main/default/objects/UtFC_Film_Event__c/fields/Program_Series__c.field-meta.xml
<CustomField>
    <fullName>Program_Series__c</fullName>
    <label>Program Series</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>10th Anniversary</fullName>
            </value>
            <value>
                <fullName>Advance Screening</fullName>
            </value>
            <value>
                <fullName>Art/Creativity in Focus/Salt Lake Art Center</fullName>
            </value>
            <value>
                <fullName>Best of Fest</fullName>
            </value>
            <value>
                <fullName>Black, Bold, &amp; Brilliant</fullName>
            </value>
            <value>
                <fullName>Black History Month</fullName>
            </value>
            <value>
                <fullName>Bully Project - School Screening</fullName>
            </value>
            <value>
                <fullName>Celebrating Seniors</fullName>
            </value>
            <value>
                <fullName>Children</fullName>
            </value>
            <value>
                <fullName>Cinema Quebecois</fullName>
            </value>
            <value>
                <fullName>Community Spotlight</fullName>
            </value>
            <value>
                <fullName>Conversation</fullName>
            </value>
            <value>
                <fullName>Cosmology of Care</fullName>
            </value>
            <value>
                <fullName>Creativity in Focus</fullName>
            </value>
            <value>
                <fullName>Curation For Hire</fullName>
            </value>
            <value>
                <fullName>Damn! These Heels</fullName>
                <label>Damn These Heels</label>
            </value>
            <value>
                <fullName>Damn These Heels Year-Round</fullName>
            </value>
            <value>
                <fullName>Democracy</fullName>
            </value>
            <value>
                <fullName>Design Matters</fullName>
            </value>
            <value>
                <fullName>Development Screening</fullName>
            </value>
            <value>
                <fullName>Director Dialogue</fullName>
            </value>
            <value>
                <fullName>Diverse Voices/KUED</fullName>
            </value>
            <value>
                <fullName>Drive-in</fullName>
            </value>
            <value>
                <fullName>Drive-In / Community Spotlight</fullName>
            </value>
            <value>
                <fullName>Drive-In / Rural Utah Project</fullName>
            </value>
            <value>
                <fullName>Drive-In Private Event</fullName>
            </value>
            <value>
                <fullName>Economics</fullName>
            </value>
            <value>
                <fullName>Education/UEA</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>