force-app/main/default/objects/UtFC_Film_Event__c/fields/Programmer__c.field-meta.xml
<CustomField>
    <fullName>Programmer__c</fullName>
    <label>Programmer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>