force-app/main/default/objects/UtFC_Film_Event__c/fields/Programmer_s_Notes__c.field-meta.xml
<CustomField>
    <fullName>Programmer_s_Notes__c</fullName>
    <label>Programmer&apos;s Notes</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>