force-app/main/default/objects/UtFC_Film_Event__c/fields/Projectionist_Tech__c.field-meta.xml
<CustomField>
    <fullName>Projectionist_Tech__c</fullName>
    <label>Projectionist / Tech</label>
    <length>255</length>
    <type>Text</type>
</CustomField>