force-app/main/default/objects/UtFC_Film_Event__c/fields/Projectionist_Tech_Contact__c.field-meta.xml
<CustomField>
    <fullName>Projectionist_Tech_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Projectionist / Tech</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>UtFC Film Events (Projectionist / Tech)</relationshipLabel>
    <relationshipName>UtFC_Film_Events_Projectionist</relationshipName>
    <type>Lookup</type>
</CustomField>