force-app/main/default/objects/UtFC_Film_Event__c/fields/QandA_Attendance__c.field-meta.xml
<CustomField>
    <fullName>QandA_Attendance__c</fullName>
    <label>Q&amp;A Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>