force-app/main/default/objects/UtFC_Film_Event__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <displayFormat>EVT-{0000}</displayFormat>
    <label>Record ID</label>
    <type>AutoNumber</type>
</CustomField>