force-app/main/default/objects/UtFC_Film_Event__c/fields/Record_Name_Asana__c.field-meta.xml
<CustomField>
    <fullName>Record_Name_Asana__c</fullName>
    <formula>IF(
    ISBLANK(TEXT(Status__c)),
    UPPER(TEXT(Program_Series__c))&amp;&quot;: &quot;&amp;Name &amp;&quot; (&quot;&amp; TEXT(Venue__c)&amp;&quot;)&quot;,
    IF(
        NOT(ISBLANK(TEXT(Status__c))),
          UPPER(TEXT(Program_Series__c))&amp;&quot;: &quot;&amp;Name &amp;&quot; (&quot;&amp;TEXT(Status__c)&amp;&quot; - &quot;&amp; TEXT(Venue__c)&amp;&quot;)&quot;, NULL
    )
)</formula>
    <label>Asana - Record Name</label>
    <type>Text</type>
</CustomField>