force-app/main/default/objects/UtFC_Film_Event__c/fields/Related_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Related_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>UtFC Film Events (Related Campaign)</relationshipLabel>
    <relationshipName>UtFC_Film_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>