force-app/main/default/objects/UtFC_Film_Event__c/fields/Run_Ends__c.field-meta.xml
<CustomField>
    <fullName>Run_Ends__c</fullName>
    <label>Run Ends:</label>
    <type>Date</type>
</CustomField>