force-app/main/default/objects/UtFC_Film_Event__c/fields/Run_Starts__c.field-meta.xml
<CustomField>
    <fullName>Run_Starts__c</fullName>
    <label>Run Starts:</label>
    <type>Date</type>
</CustomField>