force-app/main/default/objects/UtFC_Film_Event__c/fields/Runtime_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Runtime_Minutes__c</fullName>
    <label>Runtime Minutes</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>