force-app/main/default/objects/UtFC_Film_Event__c/fields/Salt_Lake_County__c.field-meta.xml
<CustomField>
    <fullName>Salt_Lake_County__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salt Lake County</label>
    <type>Checkbox</type>
</CustomField>