force-app/main/default/objects/UtFC_Film_Event__c/fields/Salt_Lake_County_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Salt_Lake_County_Attendance__c</fullName>
    <description>Used for donor reporting</description>
    <inlineHelpText>Attendees who participated in Salt Lake County (all for in-person screenings that take place in Salt Lake County, or virtual viewers who watched it from Salt Lake County.</inlineHelpText>
    <label>Salt Lake County Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>