force-app/main/default/objects/UtFC_Film_Event__c/fields/Screener_link__c.field-meta.xml
<CustomField>
    <fullName>Screener_link__c</fullName>
    <label>Screener link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>