force-app/main/default/objects/UtFC_Film_Event__c/fields/Screener_Notes__c.field-meta.xml
<CustomField>
    <fullName>Screener_Notes__c</fullName>
    <label>Screener Notes</label>
    <type>TextArea</type>
</CustomField>