force-app/main/default/objects/UtFC_Film_Event__c/fields/Screener_OK_to_Press__c.field-meta.xml
<CustomField>
    <fullName>Screener_OK_to_Press__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Screener OK to Press</label>
    <type>Checkbox</type>
</CustomField>