force-app/main/default/objects/UtFC_Film_Event__c/fields/Screening_Day__c.field-meta.xml
<CustomField>
    <fullName>Screening_Day__c</fullName>
    <formula>DAY( Screening_Date_Only__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Screening Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>