force-app/main/default/objects/UtFC_Film_Event__c/fields/Screening_Month__c.field-meta.xml
<CustomField>
    <fullName>Screening_Month__c</fullName>
    <formula>MONTH (  Screening_Date_Only__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Screening Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>