force-app/main/default/objects/UtFC_Film_Event__c/fields/Screening_Time_Only_TimeField__c.field-meta.xml
<CustomField>
    <fullName>Screening_Time_Only_TimeField__c</fullName>
    <formula>TIMEVALUE(Date_and_Time__c - 0.25)</formula>
    <label>Screening Time Only</label>
    <type>Time</type>
</CustomField>