force-app/main/default/objects/UtFC_Film_Event__c/fields/Single_Screening__c.field-meta.xml
<CustomField>
    <fullName>Single_Screening__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark this field if the film is to be played live.</inlineHelpText>
    <label>Single Screening (Live):</label>
    <type>Checkbox</type>
</CustomField>