force-app/main/default/objects/UtFC_Film_Event__c/fields/Sponsors__c.field-meta.xml
<CustomField>
    <fullName>Sponsors__c</fullName>
    <inlineHelpText>Please include notes such as (logo) or (wordmark)</inlineHelpText>
    <label>Sponsors - Listing for materials</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>