force-app/main/default/objects/UtFC_Film_Event__c/fields/Staff_1_Contact__c.field-meta.xml
<CustomField>
    <fullName>Staff_1_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Staff 1 - Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>UtFC Film Events - Staff</relationshipLabel>
    <relationshipName>UtFC_Film_Events_Staff</relationshipName>
    <type>Lookup</type>
</CustomField>