force-app/main/default/objects/UtFC_Film_Event__c/fields/Staff_1_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Staff_1_Job_Title__c</fullName>
    <label>Staff 1 - Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Staff_Screening_Jobs</valueSetName>
    </valueSet>
</CustomField>