force-app/main/default/objects/UtFC_Film_Event__c/fields/Staff_3_Contact__c.field-meta.xml
<CustomField>
    <fullName>Staff_3_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff 3 - Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>UtFC Film Events - Staff</relationshipLabel>
    <relationshipName>UtFC_Film_Events_Staff3</relationshipName>
    <type>Lookup</type>
</CustomField>