force-app/main/default/objects/UtFC_Film_Event__c/fields/Staff_at_Screening__c.field-meta.xml
<CustomField>
    <fullName>Staff_at_Screening__c</fullName>
    <label>Staff at Screening Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>