force-app/main/default/objects/UtFC_Film_Event__c/fields/Staff_Lead_Contact__c.field-meta.xml
<CustomField>
    <fullName>Staff_Lead_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Staff On-Site</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>UtFC Film Events - Staff</relationshipLabel>
    <relationshipName>UtFC_Film_Events_StaffLead</relationshipName>
    <type>Lookup</type>
</CustomField>