force-app/main/default/objects/UtFC_Film_Event__c/fields/Staffing_at_Event__c.field-meta.xml
<CustomField>
    <fullName>Staffing_at_Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Staffing at Event</label>
    <referenceTo>Staffing_at_Events__c</referenceTo>
    <relationshipLabel>UtFC Film Events</relationshipLabel>
    <relationshipName>UtFC_Film_Events</relationshipName>
    <type>Lookup</type>
</CustomField>