force-app/main/default/objects/UtFC_Film_Event__c/fields/Staffing_notes_and_comments__c.field-meta.xml
<CustomField>
    <fullName>Staffing_notes_and_comments__c</fullName>
    <label>Staffing notes and comments</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>