force-app/main/default/objects/UtFC_Film_Event__c/fields/StaffLead_JobTitle__c.field-meta.xml
<CustomField>
    <fullName>StaffLead_JobTitle__c</fullName>
    <label>Lead Staff - Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Staff_Screening_Jobs</valueSetName>
    </valueSet>
</CustomField>