force-app/main/default/objects/UtFC_Film_Event__c/fields/Streaming_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Streaming_End_Date__c</fullName>
    <description>Tracks when TWOD and Virtual Cinema films become unavailable to rent.</description>
    <inlineHelpText>Tracks when TWOD and Virtual Cinema films become unavailable to rent.</inlineHelpText>
    <label>Streaming End Date</label>
    <type>Date</type>
</CustomField>