force-app/main/default/objects/UtFC_Film_Event__c/fields/Streaming_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Streaming_Launch_Date__c</fullName>
    <inlineHelpText>Tracks when TWOD and Virtual Cinema films are available.</inlineHelpText>
    <label>Streaming Launch Date</label>
    <type>Date</type>
</CustomField>