force-app/main/default/objects/UtFC_Film_Event__c/fields/Streaming_link_Public__c.field-meta.xml
<CustomField>
    <fullName>Streaming_link_Public__c</fullName>
    <label>Streaming Link - Public:</label>
    <type>Url</type>
</CustomField>