force-app/main/default/objects/UtFC_Film_Event__c/fields/Streaming_Link_VIP_Member__c.field-meta.xml
<CustomField>
    <fullName>Streaming_Link_VIP_Member__c</fullName>
    <label>Streaming Link - VIP/Member:</label>
    <type>Url</type>
</CustomField>