force-app/main/default/objects/UtFC_Film_Event__c/fields/Streaming_Notes__c.field-meta.xml
<CustomField>
    <fullName>Streaming_Notes__c</fullName>
    <label>Streaming Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>